--- a/contacts.html
+++ b/contacts.html
@@ -11,16 +11,23 @@
     <meta name="description" content="Узнайте больше о нашей компании и истории">
 </head>
 <body>
-    <header>
-        <a href="/">Логотип или название сайта</a>
+    <header class="header">
+        <a class = "header__logo" href="/">Логотип или название сайта</a>
         <!-- Главное меню навигации -->
-        <nav>
-            <ul>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="about.html">О нас</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a class="nav__link" href="index.html"> Главная </a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link" href="about.html"> О нас </a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link" href="contacts.html"> Контакты </a>
+                </li>
             </ul>
-        </nav>    </header>
+        </nav>
+    </header>
 
     <main>
         <!-- Простые "хлебные крошки" -->
