feat: add image and video (no hero)

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Узнайте больше о нашей компании и истории">
 </head>
 <body>
-    
+
     <header class="header">
         <a class = "header__logo" href="/">Логотип или название сайта</a>
         <!-- Главное меню навигации -->
@@ -30,11 +30,13 @@
         </nav>
     </header>
 
-    <main>
+    <main class="forPadding">
         <!-- Простые "хлебные крошки" -->
-        <nav aria-label="Хлебные крошки">
-            <a href="index.html">Главная</a> →
-            <span>О нас</span>
+        <nav class="breadcrumbs" aria-label="Хлебные крошки">
+            <a class="breadcrumbs__link" href="index.html">
+                Главная
+            </a> →
+            <span class="breadcrumbs__text">О нас</span>
         </nav>
 
         <h1>О нашей компании</h1>
