--- a/contacts.html
+++ b/contacts.html
@@ -29,17 +29,18 @@
         </nav>
     </header>
 
-    <main>
+    <main class="forPadding">
         <!-- Простые "хлебные крошки" -->
-        <nav aria-label="Хлебные крошки">
-            <a href="index.html">Главная</a> →
-            <span>О нас</span>
+        <nav class="breadcrumbs" aria-label="Хлебные крошки">
+            <a class="breadcrumbs__link" href="index.html">
+                Главная
+            </a> →
+            <span class="breadcrumbs__text">О нас</span>
         </nav>
 
-        <h1> Контакты </h1>
-        <section>
-            <h2>7 777 777 77 77</h2>
-        </section>
+        <h1 class="contacts__text"> Контакты 
+            <p class="phone__number">+7 (777) 777-77-77</p>
+        </h1>
     </main>
 
     <footer>
